--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -11,6 +11,7 @@
     main {
         div {
             display: flex;
+            margin-bottom: 5px;
             flex-direction: row;
             justify-content: space-between;
         }
